cartmiddlepart gaming merchandise overflow fix

--- a/src/Components/CartsMiddlePart/CartsMiddlePart.css
+++ b/src/Components/CartsMiddlePart/CartsMiddlePart.css
@@ -484,6 +484,8 @@ input div:hover {
 .box-a {
     overflow: hidden;
     background-color: white;
+    display: flex;
+height: 250px;
 }
 
 .box div img {
@@ -495,12 +497,14 @@ input div:hover {
 }
 
 .box-a div {
-    display: inline-block;
+    /* display: inline-block; */
     margin: 5px;
     margin-right: 6px;
     margin-left: 10px;
 }
-
+.box-a div img{
+height: 100px;
+}
 .box-a div span {
     display: block;
     font-size: 13px;
